# schemessg_data_analysis

./: .gitignore  data_analysis.ipynb  long_conv.json  pyproject.toml  query_classification.csv  user_analysis.ipynb
chat_questions/: chat.txt  irrelevant.txt  search.txt  src.txt
chat_questions/24_aug/: chat.txt
